# path-finding-visualizer

./: Cargo.toml  README.md  button-9d1399111e6e8785.css  cell-b628af11a476f3c8.css  index.html  path_finding_visualizer-4b3aa3d013338fef.js  path_finding_visualizer-4b3aa3d013338fef_bg.wasm  path_finding_visualizer-79dc34661aca416a.js  path_finding_visualizer-79dc34661aca416a_bg.wasm  path_finding_visualizer-94de8269d3a1e111.js  path_finding_visualizer-94de8269d3a1e111_bg.wasm  path_finding_visualizer-f7c4279bf9294b2f.js  path_finding_visualizer-f7c4279bf9294b2f_bg.wasm  snackbar-d94ce9a2c59b5080.css
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
css/: main.css
css/elements/: separator.css
src/: constraints.rs  main.rs
src/algorithms/: a_star.rs  a_star_search.rs  bfs.rs  dfs.rs  mod.rs
src/algorithms/maze_generation/: binary_tree.rs  dfs.rs  mod.rs  recursive_division.rs
src/algorithms/path_finding/: a_star.rs  a_star_search.rs  bfs.rs  dfs.rs  mod.rs
src/components/: algorithm_selector_component.rs  app_component.rs  matrix_component.rs  mod.rs  notification_component.rs
src/components/custom_components/: algorithm_selector_component.rs  app_component.rs  cell_component.rs  matrix_component.rs  mod.rs  notification_component.rs
src/components/default_components/: button.rs  select.rs
src/components/store/: algorithm_selector_state.rs  matrix_state.rs  mod.rs
src/models/: cell.rs  matrix.rs  mod.rs  notification.rs
