[package]
name = "path_finding_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
gloo-console = "0.2.3"
strum = "0.24.1"
strum_macros = "0.24.3"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
